<resources>
  <string name="app_name">Kinaraidee</string>
  <string name="copyright">CopyRight 2016 KinAraiDee, All Rights Reserved.</string>
  <string name="sign_in_button">Sign In</string>
  <string name="sign_up_button">Sign Up</string>
  <string name="hint_email">Email</string>
  <string name="hint_password">Password</string>
  <string name="hint_password_confirmation">Password Confirmation</string>
  <string name="hint_first_name">First Name</string>
  <string name="hint_last_name">Last Name</string>
  <string name="please_wait">Please wait! &#8230;</string>
  <string name="register">No account yet? Create One</string>
  <string name="already_have_account">Already Have Account</string>
  <string name="tap_random">TAP TO RANDOM FOOD</string>
  <string name="not_found">Food not found.</string>
  <string name="google_map_api_key">AIzaSyCBKVuUSeQZTuELlw22jyoGMDdEZ4Bl7l8</string>
  <string name="menu_refresh">Refresh</string>

  <!-- Drawer -->
  <string name="open_drawer">Open Menu</string>
  <string name="close_drawer">Close Menu</string>
  <string name="filter">Filters</string>
  <string name="account_settings">Account Settings</string>
  <string name="sign_out">Sign Out</string>

  <!-- RangeSeek -->
  <string name="calories_header">Calories range (Kcal)</string>
  <string name="min_calories">0</string>
  <string name="max_calories">1500</string>
  <string name="tags_header">Demand tags</string>
  <string name="like_tag">Like</string>
  <string name="dislike_tag">Dislike</string>
  <string name="radius_header">Near Radius</string>
  <string name="hint_radius">Kilometers</string>
  <string name="radius_units">Km</string>

  <!-- Settings -->
  <string name="settings_calories">Set Calories Per Day (KCal)</string>
  <string name="settings_calories_tv">Calories : </string>
  <string name="calories_left">Calories Left Per Day</string>
  <string name="calories_units">KCal</string>
</resources>
