<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activity.LoginActivity">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:background="@color/white"
      android:orientation="vertical">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageView
          android:id="@+id/logoImage"
          android:layout_width="@dimen/logo_size"
          android:layout_height="@dimen/logo_size"
          android:layout_centerHorizontal="true"
          android:layout_centerVertical="true"
          android:src="@drawable/kin_arai_dee_logo"/>

      </RelativeLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/border"
          android:orientation="vertical"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:paddingLeft="@dimen/activity_horizontal_margin"
          android:paddingRight="@dimen/activity_horizontal_margin"
          android:paddingTop="@dimen/activity_vertical_margin">

          <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>

          <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:weightSum="3">

          <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_vertical_margin"
            android:background="@color/colorPrimary"
            android:paddingBottom="@dimen/button_vertical_padding"
            android:paddingLeft="@dimen/button_horizontal_padding"
            android:paddingRight="@dimen/button_horizontal_padding"
            android:paddingTop="@dimen/button_vertical_padding"
            android:text="@string/sign_in_button"
            android:textColor="@color/white"/>

          <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark"/>

          <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/register"
            android:textColor="@drawable/selector_text_link"/>
        </LinearLayout>

      </LinearLayout>

    </LinearLayout>

  </ScrollView>

</RelativeLayout>
